--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.3"
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.3",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
